--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEBSTUDIO</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
 
     <header>
-        <a href="">WEBSTUDIO</a>
 
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -21,18 +21,29 @@
         </nav>
 
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
-
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
     </header>
 
     <main>
 
+        <!-- section of headline -->
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+
         <!-- section with features of the company -->
         <section>
+            <h2>Features of our company</h2>
+
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -64,23 +75,23 @@
 
             <ul>
                 <li>
-                    <img src="/images/foto-mark-guerrero.jpg" alt="Product designer Mark Guerrero" width="264"
+                    <img src="./images/foto-mark-guerrero.jpg" alt="Product designer Mark Guerrero" width="264"
                         height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/foto-tom-ford.jpg" alt="Frontend developer Tom Ford" width="264" height="260">
+                    <img src="./images/foto-tom-ford.jpg" alt="Frontend developer Tom Ford" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/foto-camila-garcia.jpg" alt="Marketing Camila Garcia" width="264" height="260">
+                    <img src="./images/foto-camila-garcia.jpg" alt="Marketing Camila Garcia" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/foto-daniel-wilson.jpg" alt="UI designer Daniel Wilson" width="264" height="260">
+                    <img src="./images/foto-daniel-wilson.jpg" alt="UI designer Daniel Wilson" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -89,7 +100,7 @@
     </main>
 
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
